--- a/SmartWMS/OperationViews/GoodsReceiptView.xaml
+++ b/SmartWMS/OperationViews/GoodsReceiptView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="SmartWMS.OperationViews.GoodsReceiptView">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="ürün alım" />
+            <Label Text="Goods Receipt" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
