--- a/SmartWMS/OperationViews/TablesView.xaml
+++ b/SmartWMS/OperationViews/TablesView.xaml
@@ -29,9 +29,9 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Label Text="STORAGE LOCATIONS" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="15" Grid.ColumnSpan="2" />
-                <Label Text="ID" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="0" Grid.Row="1" />
-                <Label Text="LOCATION" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="1" Grid.Row="1" />
+                <Label Text="STORAGE LOCATIONS" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="15" Grid.ColumnSpan="2" />
+                <Label Text="ID" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="0" Grid.Row="1" />
+                <Label Text="LOCATION" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="1" Grid.Row="1" />
 
                 <ListView x:Name="LocationList" ItemsSource="{Binding StorageLocations}" RowHeight="30" SelectedItem="{Binding SelectedLocation}" Grid.ColumnSpan="2" Grid.Row="2"  >
                     <ListView.ItemTemplate>
@@ -71,10 +71,10 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Label Text="ITEMS" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="15" Grid.ColumnSpan="3" />
-                <Label Text="ID" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="0" Grid.Row="1" />
-                <Label Text="BARCODE" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="1" Grid.Row="1" />
-                <Label Text="NAME" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="2" Grid.Row="1" />
+                <Label Text="ITEMS" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="15" Grid.ColumnSpan="3" />
+                <Label Text="ID" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="0" Grid.Row="1" />
+                <Label Text="BARCODE" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="1" Grid.Row="1" />
+                <Label Text="NAME" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="2" Grid.Row="1" />
 
 
                 <ListView ItemsSource="{Binding Items}" RowHeight="30" Grid.ColumnSpan="3" Grid.Row="2" >
@@ -119,11 +119,11 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Label Text="STOCK UNITS" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="15" Grid.ColumnSpan="4" />
-                <Label Text="ID" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="0" Grid.Row="1" />
-                <Label Text="ITEM BARCODE" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="1" Grid.Row="1" />
-                <Label Text="LOCATION BARCODE" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="2" Grid.Row="1" />
-                <Label Text="COUNT" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="3" Grid.Row="1" />
+                <Label Text="STOCK UNITS" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="15" Grid.ColumnSpan="4" />
+                <Label Text="ID" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="0" Grid.Row="1" />
+                <Label Text="ITEM BARCODE" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="1" Grid.Row="1" />
+                <Label Text="LOCATION BARCODE" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="2" Grid.Row="1" />
+                <Label Text="COUNT" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" FontSize="12" Grid.Column="3" Grid.Row="1" />
 
                 <ListView ItemsSource="{Binding Stocks}" RowHeight="30" Grid.ColumnSpan="4" Grid.Row="2" >
                     <ListView.ItemTemplate>
