--- a/SmartWMS/Views/ItemRequestView.xaml
+++ b/SmartWMS/Views/ItemRequestView.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SmartWMS"
-             x:Class="SmartWMS.Views.ItemRequestView">
+             x:Class="SmartWMS.Views.ItemRequestView"
+             Title="TROLLEY TOUR">
     <ContentPage.Content>
 
         <Grid>
@@ -11,8 +12,8 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.2*" />
-                <RowDefinition Height="0.2*" />
-                <RowDefinition Height="0.47*" />
+                <RowDefinition Height="0.1*" />
+                <RowDefinition Height="0.57*" />
                 <RowDefinition Height="0.13*" />
 
 
@@ -22,6 +23,80 @@
 
             <Frame BorderColor="Gray" CornerRadius="5" Padding="8" Margin="10,10,10,10">
 
+                <StackLayout>
+
+                    <!-- 
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Label Text="Frames can wrap more complex layouts"/>
+                    </Grid>
+                    <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
+                    <Label Text="Card Example" FontSize="Medium" FontAttributes="Bold" />
+                    <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
+                    <Label Text="Frames can wrap more complex layouts to create more complex UI components, such as this card!"/>
+                    -->
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.3*" />
+                            <ColumnDefinition Width="0.7*" />
+
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <Label Text="Location:" FontSize="15" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="End" FontAttributes="Bold"  />
+                        <Label Text="{Binding LocationBarcode}" FontSize="15" VerticalOptions="Center" HorizontalOptions="Start" FontAttributes="Bold" Grid.Column="1"/>
+
+                    </Grid>
+
+                    <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.3*" />
+                            <ColumnDefinition Width="0.7*" />
+
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <Label Text="Item:" FontSize="15" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="End" FontAttributes="Bold"/>
+                        <Label Text="{Binding ItemBarcode}" FontSize="15" VerticalOptions="Center" HorizontalOptions="Start" FontAttributes="Bold" Grid.Column="1"/>
+
+
+                    </Grid>
+
+                    <BoxView Color="Gray" HeightRequest="2" HorizontalOptions="Fill" />
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.3*" />
+                            <ColumnDefinition Width="0.7*" />
+
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <Label Text="Amount:" FontSize="15" TextColor="DeepSkyBlue" VerticalOptions="Center" HorizontalOptions="End" FontAttributes="Bold"  />
+                        <Label Text="{Binding Count}" FontSize="15" VerticalOptions="Center" HorizontalOptions="Start" FontAttributes="Bold" Grid.Column="1"/>
+
+                    </Grid>
+
+
+                </StackLayout>
+                
+                
+                
+                <!-- 
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.3*" />
@@ -49,7 +124,7 @@
 
 
                 </Grid>
-
+                -->
             </Frame>
 
             <Frame BorderColor="Gray" CornerRadius="5" Padding="5" Margin="10,10,10,10" Grid.Row="1">
